--- a/styles/basic.css
+++ b/styles/basic.css
@@ -43,32 +43,51 @@ A:hover {
 
 H1 {
 	color: #333;
-	font-size: 22px;
+	font-size: 30px;
+	line-height: 44px;
 }
 
 H2 {
 	color: #333;
-	font-size: 18px;
+	font-size: 24px;
+	line-height: 36px;
 }
 
 H3 {
 	color: #333;
-	font-size: 14px;
+	font-size: 18px;
+	line-height: 27px;
 }
 
 H4, H5, H6 {
 	color: #666;
-	font-size: 14px;
+	font-size: 18px;
+	line-height: 27px;
 }
 
 HR {
 	border-top-color: #CCC;
 }
 
-ARTICLE.capitalise H1 + P:first-letter {
-	font-size: 48px;
+P {
+	line-height: 18px;
+	margin-bottom: 14px;
+}
+
+UL, OL {
+	margin-left: 20px;
+	margin-bottom: 14px;
+}
+
+UL LI, OL LI {
+	line-height: 18px;
+}
+
+ARTICLE.capitalise H2 + P:first-letter {
+	font-size: 36px;
 	float: left;
 	letter-spacing: 4px;
+	margin-top: 6px;
 }
 
 ::-moz-selection {
@@ -144,8 +163,16 @@ ARTICLE.capitalise H1 + P:first-letter {
 }
 
 blockquote {
+	border-left: 4px solid #EEEEEE;
 	color: #666;
 	margin-top: 10px;
 	margin-bottom: 10px;
 	margin-left: 20px;
+	padding-left:20px
+}
+
+code {
+	background-color: #272822;
+	color: #FB4383;
+	padding: 2px 4px;
 }
