Add some font size rules based on Golden Ratio.

--- a/styles/basic.css
+++ b/styles/basic.css
@@ -41,6 +41,7 @@ A:hover {
 	text-decoration: underline
 }
 
+/* Ratio ~1.96 */
 H1 {
 	color: #333;
 	font-size: 30px;
@@ -165,6 +166,22 @@ ARTICLE.capitalise H2 + P:first-letter {
 	font-size: 1px;
 	height: 0px;
 	line-height: 0;
+}
+
+/* Based on Golden Ratio */
+.ratio13 {
+	font-size: 13px;
+	line-height: 16px;
+}
+
+.ratio14 {
+	font-size: 14px;
+	line-height: 26px;
+}
+
+.ratio15 {
+	font-size: 15px;
+	line-height: 27px;
 }
 
 blockquote {
