Simplify rules for inputs.

--- a/styles/inputs.css
+++ b/styles/inputs.css
@@ -14,31 +14,28 @@
  * INPUTS
  * Basic rules for inputs, textareas and selects
  */
-INPUT, TEXTAREA, SELECT, .uneditable-input {
+INPUT, TEXTAREA, SELECT {
 	background-color: #FFF;
 	border: 1px solid #CCC;
 	border-radius: 3px;
 	display: inline-block;
 	font-family: 'Open Sans', sans-serif;
-	font-size: 14px;
-	line-height: 22px;
+	font-size: 13px;
 	margin-bottom: 9px
 }
 
 SELECT, INPUT[type="file"] {
-	height: 40px !important;
-	padding: 9px !important
+	height: 30px !important;
+	padding: 4px !important
 }
 
 INPUT[type="text"], INPUT[type="password"], TEXTAREA {
-	height: 22px;
-	padding: 8px;
-	width: 300px
+	padding: 4px;
 }
 
 INPUT:focus, TEXTAREA:focus {
-	border-color: rgba(82, 168, 236, 0.8);
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(82, 168, 236, 0.6);
+	border-color: #C6C6C6;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 	outline: 0 none
 }
 
@@ -47,14 +44,9 @@ INPUT, TEXTAREA {
 }
 
 SELECT {
-	background-color: #FFF;
-	width: 220px
+	background-color: #FFF
 }
 
 OPTION {
-	padding: 4px 8px
-}
-
-TEXTAREA {
-	height: 250px
+	padding: 2px 8px
 }
