--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -24,9 +24,8 @@
 	cursor: default !important;
 	display: inline-block;
 	font-size: 13px;
-	height: 30px;
-	line-height: 24px;
-	margin-bottom: 14px;
+	height: 28px;
+	margin-bottom: 10px;
 	min-width: 54px;
 	padding: 0 8px;
 	text-align: center;
@@ -34,8 +33,8 @@
 	-moz-user-select: none
 }
 
-.btn span {
-	font: 13px/22px 'Open Sans', sans-serif !important;
+.btn SPAN {
+	font: 13px/18px 'Open Sans', sans-serif !important;
 	vertical-align: top
 }
 
@@ -43,6 +42,11 @@
 	border-color: #C6C6C6;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 	color: #222 !important
+}
+
+A.btn {
+	height: 26px;
+	line-height: 26px;
 }
 
 /**
