--- a/styles/conditions.css
+++ b/styles/conditions.css
@@ -15,7 +15,8 @@
  * Your rules for Firefox browser, all versions
  */
 @-moz-document url-prefix() {
-
+	.opera { display: none }
+	.safari { display: none }
 }
 
 /**
@@ -23,7 +24,8 @@
  * Your rules for Opera browser, all versions
  */
 @media all and (-webkit-min-device-pixel-ratio:10000), not all and (-webkit-min-device-pixel-ratio:0) {
-
+	.firefox { display: none }
+	.safari { display: none }
 }
 
 /**
@@ -31,5 +33,6 @@
  * Your rules for Safari browser, all versions
  */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
-
+	.firefox { display: none }
+	.opera { display: none }
 }
