--- a/styles/conditions.css
+++ b/styles/conditions.css
@@ -23,7 +23,7 @@
  * OPERA
  * Your rules for Opera browser, all versions
  */
-@media all and (-webkit-min-device-pixel-ratio:10000), not all and (-webkit-min-device-pixel-ratio:0) {
+@media all and (-webkit-min-device-pixel-ratio:10000), not all and (-webkit-min-device-pixel-ratio:0) { /* Not working with Opera 12*/
 	.firefox { display: none }
 	.safari { display: none }
 }
