--- a/styles/typo.css
+++ b/styles/typo.css
@@ -102,6 +102,44 @@ UL.horizontal > LI {
 	*display: inline;
 }
 
+BLOCKQUOTE {
+	border-left: 4px solid #EEE;
+	color: #666;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: 20px;
+	padding-left: 10px
+}
+
+PRE {
+	color: #333;
+	display: block;
+	font-family: Courier, 'Courier New', monospace;
+	margin: 0 2px;
+	padding: 2px 4px
+}
+
+CODE {
+	background-color: #F8F8F8;
+	border: 1px solid #CCC;
+	border-radius: 3px;
+	color: #333;
+	display: block;
+	font-family: Courier, 'Courier New', monospace;
+	margin: 0 2px;
+	padding: 2px 4px
+}
+
+/* Based on Monokai scheme colors */
+CODE.monokai {
+	background-color: #272822;
+	color: #FB4383
+}
+
+P > CODE {
+	display: inline-block
+}
+
 ARTICLE.capitalise H2 + P:first-letter {
 	font-size: 36px;
 	float: left;
@@ -127,6 +165,14 @@ ARTICLE UL {
 ARTICLE OL {
 	list-style: decimal outside none;
 	margin-left: 34px;
+}
+
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+	color: #C0C0C0
+}
+
+input:-moz-placeholder, textarea:-moz-placeholder {
+	color: #C0C0C0
 }
 
 /* Based on Golden Ratio */
