--- a/styles/reset.css
+++ b/styles/reset.css
@@ -8,9 +8,9 @@
  *
  * @copyright	Copyright 2012, Dimitris Krestos
  * @license		Apache License, Version 2.0 (http://www.opensource.org/licenses/apache2.0.php)
- * @link		http://vdw.staytuned.gr
+ * @link		http://vdw.staytuned.gr/html5-starter-kit-blankplate/
  * @package		BlankPlate
- * @version		v1.0
+ * @version		v1.0.0
  */
 
 /**
