--- a/styles/typography.css
+++ b/styles/typography.css
@@ -5,9 +5,9 @@
  *
  * @copyright	Copyright 2012, Dimitris Krestos
  * @license		Apache License, Version 2.0 (http://www.opensource.org/licenses/apache2.0.php)
- * @link		http://vdw.staytuned.gr
+ * @link		http://vdw.staytuned.gr/html5-starter-kit-blankplate/
  * @package		BlankPlate
- * @version		v1.0
+ * @version		v1.0.0
  */
 
 /**
@@ -18,7 +18,7 @@
 	font-family: 'TheDummyFontID';
 	src: url('fonts/dummyfont.eot'); /* IE6–8 */
 
-	/* FF3.6+, IE9, Chrome6+, Saf5.1+*/
+	/* FF3.6+, IE9, Chrome6+, Saf5.1+ */
 	/* Saf3—5, Chrome4+, FF3.5, Opera 10+ */
 	src: url('fonts/dummyfont.eot?#iefix') format('embedded-opentype'),
 		 url('fonts/dummyfont.woff') format('woff'),
@@ -32,6 +32,35 @@
  * TYPOGRAPHY
  * A basic declaration of common elements
  */
+BODY {
+	color: #686868;
+	font-family: Georgia, Palatino, "Palatino Linotype", Times, "Times New Roman", serif;
+
+	/*
+	Some basic font stacks from cssfontstack.com
+	Sans Serif
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+	font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
+	font-family: Tahoma, Verdana, Segoe, sans-serif;
+	font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+	font-family: Verdana, Geneva, sans-serif;
+
+	Serif
+	font-family: Georgia, Palatino, "Palatino Linotype", Times, "Times New Roman", serif;
+	font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;
+
+	Monospaced
+	font-family: Consolas, monaco, monospace;
+	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+	font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
+	*/
+
+	/* Ratio ~1.48 */
+	font-size: 13px;
+	line-height: 18px
+}
+
 A {
 	color: #000;
 	text-decoration: none;
@@ -41,56 +70,65 @@ A:hover {
 	text-decoration: underline
 }
 
+H1, H2, H3, H4, H5, H6 {
+	font-family: Helvetica, "Helvetica Neue", Arial, sans-serif
+}
+
 /* Ratio ~1.96 */
 H1 {
 	color: #333;
 	font-size: 30px;
-	line-height: 44px;
+	line-height: 44px
 }
 
 H2 {
 	color: #333;
 	font-size: 24px;
-	line-height: 36px;
+	line-height: 36px
 }
 
 H3 {
 	color: #333;
 	font-size: 18px;
-	line-height: 27px;
+	line-height: 27px
 }
 
 H4, H5, H6 {
 	color: #666;
 	font-size: 18px;
-	line-height: 27px;
+	line-height: 27px
 }
 
 HR {
-	border-top-color: #CCC;
+	border-top-color: #CCC
 }
 
 P {
 	line-height: 18px;
-	margin-bottom: 14px;
+	margin-bottom: 14px
 }
 
-UL, OL {
-	margin: 14px 0 14px 20px;
+/* Hide empty paragraphs */
+P:empty {
+	display: none
+}
 
+/* Horizontal & vertical list */
+UL, OL {
+	margin: 14px 0 14px 20px
 }
 
 UL LI, OL LI {
-	line-height: 18px;
+	line-height: 18px
 }
 
 UL.vertical {
-	margin: 0;
+	margin: 0
 }
 
 UL.horizontal {
 	display: inline;
-	margin: 0;
+	margin: 0
 }
 
 UL.horizontal > LI {
@@ -140,53 +178,61 @@ P > CODE {
 	display: inline-block
 }
 
+/* Capitalise first letter of the paragraph */
 ARTICLE.capitalise H2 + P:first-letter {
 	font-size: 36px;
 	float: left;
 	letter-spacing: 4px;
-	margin-top: 6px;
+	margin-top: 6px
 }
 
-P B, LI B,
-P STRONG, LI STRONG {
-	font-weight: bold;
+P B,
+LI B,
+P STRONG,
+LI STRONG {
+	font-weight: bold
 }
 
-P I, LI I,
-P EM, LI EM {
-	font-style: italic;
+P I,
+LI I,
+P EM,
+LI EM {
+	font-style: italic
 }
 
 ARTICLE UL {
 	list-style: disc outside none;
-	margin-left: 34px;
+	margin-left: 34px
 }
 
 ARTICLE OL {
 	list-style: decimal outside none;
-	margin-left: 34px;
+	margin-left: 34px
 }
 
-input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+/* Styles for imput's placeholder */
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
 	color: #C0C0C0
 }
 
-input:-moz-placeholder, textarea:-moz-placeholder {
+input:-moz-placeholder,
+textarea:-moz-placeholder {
 	color: #C0C0C0
 }
 
 /* Based on Golden Ratio */
 .ratio13 {
 	font-size: 13px;
-	line-height: 16px;
+	line-height: 16px
 }
 
 .ratio14 {
 	font-size: 14px;
-	line-height: 26px;
+	line-height: 26px
 }
 
 .ratio15 {
 	font-size: 15px;
-	line-height: 27px;
+	line-height: 27px
 }
